--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require":      {
         "php": "^7.4 || ^8.0",
-        "knplabs/gaufrette": "^0.11",
+        "durimjusaj/gaufrette": "^1.1",
         "symfony/config": "^5.0|^6.0|^7.0",
         "symfony/dependency-injection": "^5.0|^6.0|^7.0",
         "symfony/http-kernel": "^5.0|^6.0|^7.0"
